k8s-sonar-arti/sonar-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonar
  namespace: sonar
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  rules:
  - host: sonar-se-latam-demo.harness-demo.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonar
            port: 
              number: 80
